// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Length /> should render 1`] = `
<Connect(Link)
  to={[Function]}
>
  100
   amino acids
   (complete)
</Connect(Link)>
`;

exports[`<Length /> should render 2`] = `
<Connect(Link)
  to={[Function]}
>
  100
   amino acids
   (fragment)
</Connect(Link)>
`;

exports[`<Length /> should render 3`] = `
<Connect(Link)
  to={[Function]}
>
  100
   amino acids
</Connect(Link)>
`;
